# ComRpcDanglingTest

./: README.md
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  main.cpp
Interface/: CustomInterfaces.vcxproj  CustomInterfaces.vcxproj.filters  ITestPlugin.h  Ids.h  Module.cpp  Module.h
Plugin/TestPlugin/: .gitignore  CMakeLists.txt  Module.h  TestPlugin.conf.in  TestPlugin.config  TestPlugin.cpp  TestPlugin.h  TestPlugin.vcxproj  TestPlugin.vcxproj.filters  TestPluginImplementation.cpp
